k8s/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-app-backend
  template:
    metadata:
      labels:
        app: employee-app-backend
    spec:
      containers:
      - name: employee-app-backend
        image: yugal47/employee-app-backend:v0.0.2
