k8s/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-app-backend
spec:
  type: NodePort
  selector:
    app: employee-app-backend
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32001
