k8s/employee-app-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-app-mysql-service
spec:
  type: NodePort
  selector:
    app: employee-app-mysql-deployment
  ports:
  - port: 3306
    targetPort: 3306
