k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-app-frontend
spec:
  type: NodePort
  selector:
    app: employee-app-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32000
